feat: 跳转到 http 域名

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://pobusama.top</title>
-<meta http-equiv="refresh" content="0; URL=https://pobusama.top">
-<link rel="canonical" href="https://pobusama.top">
+<title>Redirecting to http://pobusama.top</title>
+<meta http-equiv="refresh" content="0; URL=http://pobusama.top">
+<link rel="canonical" href="http://pobusama.top">
